moviedb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fablix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fablix
  template:
    metadata:
      labels:
        app: fablix
    spec:
      containers:
        - name: fablix-container
          image: lucaszhuang1210/fabflix:v3
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: fablix-service
spec:
  selector:
    app: fablix
  ports:
    - name: http
      port: 8080
  type: ClusterIP
